Renaming rediscluster endpoints as redkeycluster (#5)
* Update Go version to v1.24.6

* Rename endpoints to use redkeycluster

* Delete .go-version file

* Rename handler funcionts to use RedKeyCluster instead RedisCluster/Cluster

* Rename RedisCluster as RedKeyCluster

* Rename internal/cluster/redis.go as internal/cluster/redkey.go

* Rename the value of redkeyClusterMetrics constant

* Trim spaces

* Renaming Redis Operator as RedKey Operator

* Cleanup

* Add RedKey Robin features

* Rename RedisRobin as RedkeyRobin

* Rename RedisRobin as RedkeyRobin

* Rename RedisRobin as RedkeyRobin

* Rename RedisRobin as RedkeyRobin

* Rename RedisRobin as RedkeyRobin

* Rename RedisRobin as RedkeyRobin

* Rename RedisRobin as RedkeyRobin

* Rename RedisRobin as RedkeyRobin

* Rename RedisRobin as RedkeyRobin
